--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     font-size: 100%;
     font-family: Georgia, sans-serif;
     color: #004000;
-   }   
+   }
   body {
     font-size: 120%;
     font-family: Georgia, sans-serif;
@@ -27,6 +27,21 @@
     font-style: normal;
     color: #a00000;
    }
+   .cite {
+    font-size: 100%;
+    font-family: Georgia, sans-serif;
+<!--    color: #300080; -->
+   }
+<!--   .pap {
+    font-size: 105%;
+    font-style: italic;
+    font-family: Georgia, sans-serif;
+    color: #300080;
+   }    -->
+   .comm {
+    font-size: 87.5%;
+    font-family: Georgia, sans-serif;
+   }
   </style>
 </head>
 
@@ -37,7 +52,7 @@
         <img align="right" src="./pics/2019.jpg" width="15%" hspace="30px" vspace="30px">
 </h2>
 
-I'm a researcher in Theoretical computer science with the main focus of interests in the complexity of computations (circuit synthesis, fast 
+I'm a researcher in Theoretical computer science with the main focus of interests in the complexity of computations (circuit synthesis, fast
 algorithms etc.).
 
 <h3>
@@ -48,7 +63,7 @@ algorithms etc.).
         <tbody>
                 <tr>
                         <td> 1981 </td>
-                        <td> - </td>
+                        <td> &#8211 </td>
                         <td bgcolor ="#d0ff84"> my birhtplace is
                                 <a href="https://en.wikipedia.org/wiki/Eberswalde">
                                 Eberswalde</a>
@@ -57,7 +72,7 @@ algorithms etc.).
                 </tr>
                 <tr>
                         <td> 1998 </td>
-                        <td> - </td>
+                        <td> &#8211 </td>
                         <td> secondary education: the
                                 <a href="http://www.anohin.edu.ru/istoria-klassa">physics&math class</a>
                                 governed by M.B. Anokhin in <a href="https://en.wikipedia.org/wiki/Cherepovets">Cherepovets</a> State University
@@ -65,19 +80,19 @@ algorithms etc.).
                 </tr>
                 <tr>
                         <td> 2004 </td>
-                        <td> - </td>
+                        <td> &#8211 </td>
                         <td bgcolor ="#d0ff84"> higher education: Moscow State University,
                                 <a href="https://math.msu.ru">faculty of Mechanics and Mathematics</a>
                         </td>
                 </tr>
                 <tr>
                         <td> 2007 </td>
-                        <td> - </td>
+                        <td> &#8211 </td>
                         <td> candidate dissertation (Ph.D): Moscow State University </td>
                 </tr>
                 <tr>
                         <td> 2021 </td>
-                        <td> - </td>
+                        <td> &#8211 </td>
                         <td bgcolor ="#d0ff84"> doctoral dissertation (Dr.Habil): Moscow State University </td>
                 </tr>
        </tbody>
@@ -100,19 +115,19 @@ algorithms etc.).
                     <td>
                         <a href="https://web.vu.lt/mif/s.jukna/index.html">Stasys Jukna</a>, Igor Sergeev
                         <h4> Complexity of linear boolean operators </h4>
-                        <i>Foundations and Trends in Theoretical Computer Science.</i> 2013. Vol. 9(1), 1-123.
+                        <i>Foundations and Trends in Theoretical Computer Science.</i> 2013. <b>9</b>(1), 1-123.
                         <!-- <img src="./pics/now-publishers.png" width="5%"> -->
                         <a href="http://dx.doi.org/10.1561/0400000063">DOI</a>
-                        
+
                         <p> Book's <a href="https://web.vu.lt/mif/s.jukna/Knizka/index.html">homepage</a> providing errata, comments etc.</p>
-                        
+
                         <p> <a href="./papers/linear.pdf">PDF</a> containing hyperlinks </p>
                     </td>
                 </tr>
        </tbody>
 </table>
 
-<hr>  </hr>
+<!-- <hr>  </hr>  -->
 
 <table cols="2" cellspacing="25">
         <tbody>
@@ -122,9 +137,9 @@ algorithms etc.).
                     </td>
                     <td>
                         <h4> Etudes on the methods of fast circuit synthesis </h4>
-                        I've prepared a draft of the book illustrating ideas behind the 
-                        methods of synthesis of fast circuits (in Russian). 
-                        <p> </p> 
+                        I've prepared a draft of the book illustrating ideas behind the
+                        methods of synthesis of fast circuits (in Russian).
+                        <p> </p>
                         <a href="./papers/S-book_090523.pdf">Current version</a> (dated by 09.05.2023).
                    </td>
                 </tr>
@@ -138,13 +153,102 @@ algorithms etc.).
         Research papers
 </h3>
 
-The list of my scientific papers is also available at 
+The list of my scientific papers is also available at
 <a href="https://scholar.google.com/citations?user=iIsjHwEAAAAJ&hl=en">Google Scholar</a>,
 <a href="https://www.researchgate.net/profile/I-Sergeev-3/research">Researchgate</a>,
 <a href="https://www.mathnet.ru/php/person.phtml?&personid=27771&option_lang=eng">Mathnet</a>,
 <a href="https://istina.msu.ru/profile/isserg/">Istina</a>
 
+<p> </p>
 
+<div class="cite">
+<font color="300080">[5]</font> Sergeev I. S. <i><font color="300080"> On constructing circuits for transforming the polynomial and normal bases of finite fields from one to the other. </font></i>
+    Discrete Mathematics and Applications. 2007. <b>17</b>(4), 361-373.
+    <a href="https://doi.org/10.1515/dma.2007.031">DOI</a> (translation of a paper from <i>Diskretnaya matematika</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/250969536_On_constructing_circuits_for_transforming_the_polynomial_and_normal_bases_of_finite_fields_from_one_to_the_other">here</a>
+</div>
+
+<div class="comm">
+ &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity (in fact, slightly improved due to the progress in rectangular matrix multiplication). 
+ 
+  <br> &#8984 C. Umans (<a href="https://doi.org/10.1145/1374376.1374445">2008</a>) showed that the modular composition of degree-<font face="serif"><i>n</i></font> polynomials over the fields of characteristic
+  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity. This result lowers the complexity bounds for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[4]</font> Gashkov S. B., Grinchuk M. I., Sergeev I. S. <i><font color="300080"> Circuit design of an adder of small depth.</font></i>
+    J. Applied and Industrial Math. 2008. <b>2</b>(2), 167-178.
+    <a href="https://doi.org/10.1134/S1990478908020038">DOI</a> (translation of a paper from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+    PDF including a correction that wasn't translated is available <a href="https://www.researchgate.net/publication/250950249_Circuit_design_of_an_adder_of_small_depth">here</a>
+</div>
+
+<div class="comm">
+ &#9672 We present and compare a few practical methods for shallow implementation of adder carry functions. Finally we construct an <font face="serif"><i>n</i></font>-digit adder of complexity <font face="serif">(8+<i>o</i>(1))<i>n</i></font> and depth
+<font face="serif">log<sub>2</sub><i>n</i> + ((2+<i>o</i>(1))log<sub>2</sub><i>n</i>)<sup>1/2</sup></font> in the full binary boolean basis slightly improving the depth estimate for balanced adders made by V. M. Khrapchenko (1967).
+
+ <br> &#8984 M. I. Grinchuk (<a href="https://doi.org/10.1134/S1990478909010086">2008</a>) proved a new upper bound <font face="serif">log<sub>2</sub><i>n</i> + log<sub>2</sub>log<sub>2</sub><i>n</i> + <i>O</i>(1)</font> on the depth of an <font face="serif"><i>n</i></font>-digit adder.
+
+ <br> &#8984 A. Hermann (<a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8481">2020</a>) constructed adders of linear complexity and depth <font face="serif">log<sub>2</sub><i>n</i> + log<sub>2</sub>log<sub>2</sub><i>n</i> + log<sub>2</sub>log<sub>2</sub>log<sub>2</sub><i>n</i> + <i>O</i>(1)</font>.
+</div>
+
+<p> </p>
+
+
+<div class="cite">
+<font color="300080">[3]</font> Sergeev I. S. <i><font color="300080"> Inversion in finite fields of characteristic 2 using logarithmic depth.</font></i>
+    Moscow University Math. Bulletin. 2007. <b>62</b>(1), 29-33.
+    <a href="https://doi.org/10.3103/S0027132207010068">DOI</a> (translation of a paper from <i>Vestnik Moskovskogo Universiteta</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/225690381_Inversion_in_finite_fields_of_characteristic_2_using_logarithmic_depth">here</a>
+</div>
+
+<div class="comm">
+ &#9672 A brief version of [2] (omitting most of proofs).
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[2]</font> Sergeev I. S. <i><font color="300080"> On circuits of logarithmic depth for inversion in finite fields of characteristic two.</font></i>
+    Mathematical Problems of Cybernetics. Vol. 15. Moscow: Fizmatlit, 2006, 35-64.
+    <a href="./papers/mvk2006_35.pdf">PDF</a> (in Russian)
+    <a href="https://keldysh.ru/mvk/index.php?id=vypusk-15">web-page</a>
+</div>
+
+<div class="comm">
+ &#9672 B. Litow and G. Davida (1988) and J. von zur Gathen (1990) constructed logarithmic depth circuits for inversion in finite fields.
+ We propose an alternative method and provide accurate depth and complexity bounds.
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[1]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> An application of the method of additive chains to inversion in finite fields.</font></i>
+    Discrete Mathematics and Applications. 2006. <b>16</b>(6), 601-618.
+    <a href="https://doi.org/10.1515/156939206779217952">DOI</a> (translation of a paper from <i>Diskretnaya matematika</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/250969471_An_application_of_the_method_of_additive_chains_to_inversion_in_finite_fields">here</a>
+</div>
+
+<div class="comm">
+ &#9672 We discuss constructions of addition chains for efficient implementation of inversion in binary finite fields. By the way, we construct  addition chains of the asymptotically minimal length <font face="serif">(1+<i>o</i>(1))log<sub>2</sub><i>n</i></font> and of depth <font face="serif">[log<sub>2</sub><i>n</i>]+2</font>, and show that in general case, this depth bound cannot be improved.
+</div>
+
+<h3>
+        Theses
+</h3>
+
+<div class="cite">
+candidate dissertation (Ph.D): <i><font color="300080">On implementation of some operations in finite fields by logarithmic depth circuits.</font></i> MSU, 2007.
+<a href="./papers/diss2007.pdf">PDF</a> (in Russian)
+</div>
+
+<p>  </p>
+
+<div class="cite">
+doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synthesis of parallel circuits.</font></i> MSU, 2021.
+<a href="./papers/diss2021.pdf">PDF</a> (in Russian) <a href="https://istina.msu.ru/dissertations/378944357">web-page</a>
+</div>
 
 </body>
 
