--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    }
    .cite {
     font-size: 100%;
+    line-height: 1.3;
     font-family: Georgia, sans-serif;
 <!--    color: #300080; -->
    }
@@ -40,6 +41,7 @@
    }    -->
    .comm {
     font-size: 87.5%;
+    margin-top: 8px;
     font-family: Georgia, sans-serif;
    }
   </style>
@@ -67,7 +69,9 @@ algorithms etc.).
                         <td bgcolor ="#d0ff84"> my birhtplace is
                                 <a href="https://en.wikipedia.org/wiki/Eberswalde">
                                 Eberswalde</a>
-                                 (suburbs of Berlin)
+                                 (suburbs of Berlin);
+                                native cities are <a href="https://en.wikipedia.org/wiki/Tbilisi">Tbilisi</a>, 
+                                <a href="https://en.wikipedia.org/wiki/Babruysk">Bobruysk</a>, <a href="https://en.wikipedia.org/wiki/Cherepovets">Cherepovets</a>
                         </td>
                 </tr>
                 <tr>
@@ -75,7 +79,7 @@ algorithms etc.).
                         <td> &#8211 </td>
                         <td> secondary education: the
                                 <a href="http://www.anohin.edu.ru/istoria-klassa">physics&math class</a>
-                                governed by M.B. Anokhin in <a href="https://en.wikipedia.org/wiki/Cherepovets">Cherepovets</a> State University
+                                governed by M.B. Anokhin in Cherepovets State University
                         </td>
                 </tr>
                 <tr>
@@ -162,9 +166,72 @@ The list of my scientific papers is also available at
 <p> </p>
 
 <div class="cite">
+<font color="300080">[9]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> The complexity and depth of Boolean circuits for multiplication and inversion in some fields <font face="serif">GF(2<sup>n</sup>)</font>.</font></i>
+    Moscow University Math. Bulletin. 2009. <b>64</b>(4), 139-143.
+    <a href="https://doi.org/10.3103/S0027132207010068">DOI</a> (translation of a
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=vmumm&paperid=882&option_lang=eng">paper</a> from <i>Vestnik Moskovskogo Universiteta</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/251010427_The_complexity_and_depth_of_Boolean_circuits_for_multiplication_and_inversion_in_some_fields_GF_2_n">here</a>
+</div>
+
+<div class="comm">
+ &#9672 We provide accurate complexity estimates for multiplication and inversion in some special field towers. 
+ In particular, they lead to better upper bounds for multiplication of binary
+ polynomials than those following from earlier works by J. von zur Gathen and J. Gerhard (1999) and D. J. Bernstein (2001).
+</div>
+
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[8]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> On design of circuits of logarithmic depth for inversion in finite fields.</font></i>
+    Discrete Mathematics and Applications. 2008. <b>18</b>(5), 483-504.
+    <a href="https://doi.org/10.1515/DMA.2008.035">DOI</a> (translation of a
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1023&option_lang=eng">paper</a> from <i>Diskretnaya matematika</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/250969369_On_design_of_circuits_of_logarithmic_depth_for_inversion_in_finite_fields">here</a>
+</div>
+
+<div class="comm">
+ &#9672 We implement inversion in finite fields <font face="serif"><i>GF</i>(<i>p<sup>n</sup></i>)</font> by logarithmic depth arithmetic circuits over 
+ <font face="serif"><i>GF</i>(<i>p</i>)</font> and provide accurate complexity estimates.   
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[7]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> Bit-parallel circuits for arithmetic in finite fields. </font></i>
+    NATO Science for Peace and Security. Ser. D. Information and communication security. Vol. 18, 2008. Boolean functions in cryptology and information security. 104-125.
+    <a href="https://doi.org/10.3233/978-1-58603-878-6-104">DOI</a> 
+    PDF is available <a href="https://www.researchgate.net/publication/267062355_Bit-parallel_circuits_for_arithmetic_in_finite_fields">here</a>
+</div>
+
+<div class="comm">
+ &#9672 A survey of parallel circuits for operations in finite fields.
+ </div>
+ 
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[6]</font> Sergeev I. S. <i><font color="300080"> On the complexity of the gradient of a rational function. </font></i>
+    J. Applied and Industrial Math. 2008. <b>2</b>(3), 385-396.
+    <a href="https://doi.org/10.1134/S1990478908020038">DOI</a> (translation of a 
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=da&paperid=508&option_lang=eng">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+    PDF is available <a href="https://www.researchgate.net/publication/226427451_On_the_complexity_of_the_gradient_of_a_rational_function">here</a>
+</div>
+
+<div class="comm">
+ &#9672 W. Baur and V. Strassen (1983) proved a classical relation <font face="serif"><b>C</b>(<i>&#8711 f</i>) &#8804 4<b>C</b>(<i>f</i>)</font> between the circuit complexity of a rational function <font face="serif"><i>f</i></font> and its gradient in the arithmetic basis <font face="serif">{ &#177,&#215, &#8260 }</font>.
+ We improve it to <font face="serif"><b>C</b>(<i>&#8711 f</i>) &#8804 3<b>C</b>(<i>f</i>) + <i>n</i></font>, where <font face="serif"><i>n</i></font> is
+ the number of variables.
+ </div>
+ 
+<p> </p>
+
+<div class="cite">
 <font color="300080">[5]</font> Sergeev I. S. <i><font color="300080"> On constructing circuits for transforming the polynomial and normal bases of finite fields from one to the other. </font></i>
     Discrete Mathematics and Applications. 2007. <b>17</b>(4), 361-373.
-    <a href="https://doi.org/10.1515/dma.2007.031">DOI</a> (translation of a paper from <i>Diskretnaya matematika</i>)
+    <a href="https://doi.org/10.1515/dma.2007.031">DOI</a> (translation of a 
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=968&option_lang=eng">paper</a> from <i>Diskretnaya matematika</i>)
     PDF is available <a href="https://www.researchgate.net/publication/250969536_On_constructing_circuits_for_transforming_the_polynomial_and_normal_bases_of_finite_fields_from_one_to_the_other">here</a>
 </div>
 
@@ -172,7 +239,7 @@ The list of my scientific papers is also available at
  &#9672 E. Kaltofen and V. Shoup (1998) for the problem of transition between polynomial and normal representations of finite fields <font face="serif"><i>GF</i>(<i>q<sup>n</sup></i>)</font> proposed arithmetic circuits of subquadratic complexity <font face="serif"><i>O</i>(<i>n</i><sup>1.82</sup>)</font> over <font face="serif"><i>GF</i>(<i>q</i>)</font>. However, their polynomial-to-normal algorithm is probabilistic. We propose a pair of deterministic and seemingly simpler algorithms of similar complexity (in fact, slightly improved due to the progress in rectangular matrix multiplication). 
  
   <br> &#8984 C. Umans (<a href="https://doi.org/10.1145/1374376.1374445">2008</a>) showed that the modular composition of degree-<font face="serif"><i>n</i></font> polynomials over the fields of characteristic
-  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity. This result lowers the complexity bounds for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
+  <font face="serif"><i>n</i><sup><i>o</i>(1)</sup></font> has almost linear complexity. This result lowers the complexity of algorithms for transitions in the fields of small characteristic to <font face="serif"><i>O</i>(<i>n</i><sup>1.63</sup>)</font> given the present-day (2023) bounds for rectangular matrix multiplication.
 </div>
 
 <p> </p>
@@ -180,7 +247,8 @@ The list of my scientific papers is also available at
 <div class="cite">
 <font color="300080">[4]</font> Gashkov S. B., Grinchuk M. I., Sergeev I. S. <i><font color="300080"> Circuit design of an adder of small depth.</font></i>
     J. Applied and Industrial Math. 2008. <b>2</b>(2), 167-178.
-    <a href="https://doi.org/10.1134/S1990478908020038">DOI</a> (translation of a paper from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
+    <a href="https://doi.org/10.1134/S1990478908020038">DOI</a> (translation of a 
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=da&paperid=40&option_lang=eng">paper</a> from <i>Diskretnyi Analiz i Issledovanie Operatsii</i>)
     PDF including a correction that wasn't translated is available <a href="https://www.researchgate.net/publication/250950249_Circuit_design_of_an_adder_of_small_depth">here</a>
 </div>
 
@@ -195,11 +263,11 @@ The list of my scientific papers is also available at
 
 <p> </p>
 
-
 <div class="cite">
 <font color="300080">[3]</font> Sergeev I. S. <i><font color="300080"> Inversion in finite fields of characteristic 2 using logarithmic depth.</font></i>
     Moscow University Math. Bulletin. 2007. <b>62</b>(1), 29-33.
-    <a href="https://doi.org/10.3103/S0027132207010068">DOI</a> (translation of a paper from <i>Vestnik Moskovskogo Universiteta</i>)
+    <a href="https://doi.org/10.3103/S0027132207010068">DOI</a> (translation of a 
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=vmumm&paperid=1021&option_lang=eng">paper</a> from <i>Vestnik Moskovskogo Universiteta</i>)
     PDF is available <a href="https://www.researchgate.net/publication/225690381_Inversion_in_finite_fields_of_characteristic_2_using_logarithmic_depth">here</a>
 </div>
 
@@ -218,7 +286,7 @@ The list of my scientific papers is also available at
 
 <div class="comm">
  &#9672 B. Litow and G. Davida (1988) and J. von zur Gathen (1990) constructed logarithmic depth circuits for inversion in finite fields.
- We propose an alternative method and provide accurate depth and complexity bounds.
+ We propose an alternative method and provide accurate depth and complexity bounds for binary fields.
 </div>
 
 <p> </p>
@@ -226,7 +294,8 @@ The list of my scientific papers is also available at
 <div class="cite">
 <font color="300080">[1]</font> Gashkov S. B., Sergeev I. S. <i><font color="300080"> An application of the method of additive chains to inversion in finite fields.</font></i>
     Discrete Mathematics and Applications. 2006. <b>16</b>(6), 601-618.
-    <a href="https://doi.org/10.1515/156939206779217952">DOI</a> (translation of a paper from <i>Diskretnaya matematika</i>)
+    <a href="https://doi.org/10.1515/156939206779217952">DOI</a> (translation of a 
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=80&option_lang=eng">paper</a> from <i>Diskretnaya matematika</i>)
     PDF is available <a href="https://www.researchgate.net/publication/250969471_An_application_of_the_method_of_additive_chains_to_inversion_in_finite_fields">here</a>
 </div>
 
