--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
+<a name="top"></a>
  <title>
-        Igor S. Sergeev  <a name="top"></a>
+        Igor S. Sergeev
  </title>
  <style type="text/css">
    h2 {
@@ -137,14 +138,15 @@ algorithms etc.).
         <tbody>
                 <tr>
                     <td>
-                        <img src="./pics/Sbook.jpg" width="100">
+                        <img src="./pics/Sbook.jpg" width="110">
                     </td>
                     <td>
+                        Igor S. Sergeev
                         <h4> Etudes on the methods of fast circuit synthesis </h4>
                         I've prepared a draft of the book illustrating ideas behind the
                         methods of synthesis of fast circuits (in Russian).
                         <p> </p>
-                        <a href="./papers/S-book_090523.pdf">Current version</a> (dated by 09.05.2023).
+                        <a href="./papers/S-book_090523.pdf">Current version</a> (dated by 09.05.2023) <a href="http://dx.doi.org/10.13140/RG.2.2.10934.78400">DOI</a>
                    </td>
                 </tr>
        </tbody>
@@ -172,6 +174,97 @@ The list of my scientific papers is also available at
 <p> </p>
 
 <div class="cite">
+<font color="300080">[41]</font> Sergeev I. S. <i><font color="300080"> On the additive complexity of some number sequences.</font></i>
+(submitted to <i>Matematicheskie Zametki</i>)
+</div>
+
+<div class="comm">
+ &#9672 We prove a few results on the additive complexity. (i) We improve a third term in the N. Pippenger's upper bound (1980) on the complexity of the class of 
+<font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded coefficients from <font face="serif">...+<i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif">...+<i>n</i></font>, and it is tight. Principally, it follows from [29]. (ii) We obtain a tight asymptotic complexity of the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>-1</sup>, 2<sup><i>n</i></sup>-1</font>} improving non-matching bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence proved a lower bound <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>2/3-<i>o</i>(1)</sup>)</font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>1-<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i>)</font>. 
+ </div>
+
+<p> <a name="e13"></a>  </p>
+
+<div class="cite">
+<font color="300080">[e13]</font> Sergeev I. S. <i><font color="300080"> An explicit finite <font face="serif"><i>B<sub>k</sub></i></font>-sequence. </font></i> arXiv ePrints. 2023. Art. 2304.03988.
+    <a href="https://doi.org/10.48550/arXiv.2304.03988">DOI</a> <a href="./papers/2304.03988.pdf">PDF</a>
+</div>
+
+<div class="comm">
+ &#9672 For any <font face="serif"><i>n</i></font> and <font face="serif"><i>k</i></font>, we construct an explicit (that is, computable in polynomial time) example of a dence enough integer <font face="serif"><i>B<sub>k</sub></i></font>-sequence of size <font face="serif"><i>n</i></font> consisting of elements bounded by <font face="serif"><i>n</i><sup><i>k</i>+<i>o</i>(<i>k</i>)</sup></font>. It seems that in the case of growing <font face="serif"><i>k</i></font>'s, such examples were missed in literature. A fragment of [41]. 
+</div>
+
+<p> <a name="e12"></a>  </p>
+
+<div class="cite">
+<font color="300080">[e12]</font> Sergeev I. S. <i><font color="300080"> Notes on the complexity of coverings for Kronecker powers of symmetric matrices. </font></i> arXiv ePrints. 2022. Art. 2212.01776.
+    <a href="https://doi.org/10.48550/arXiv.2212.01776">DOI</a> <a href="./papers/2212_01776_eng.pdf">PDF</a>
+</div>
+
+<div class="comm">
+ &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to slightly improve the upper bound on the additive complexity of the Sierpinsky (disjointness) matrix in depth <font face="serif">2</font>.
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[40]</font> Sergeev I. S. <i><font color="300080"> On the multiplicative complexity of polynomials.</font></i>   Diskretnaya Matematika (Discrete Mathematics). 2022. <b>34</b>(3), 85-89. <a href="https://doi.org/10.4213/dm1714">DOI</a>
+    PDF (in Russian) will be available on the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=dm&paperid=1714&option_lang=eng">web-page</a> since October, 2023
+</div>
+
+<div class="comm">
+ &#9672 We show that the multiplicative (nonscalar) complexity of the class of complex degree-<font face="serif"><i>d</i></font> polynomials of <font face="serif"><i>n</i></font> variables is of order <font face="serif"><i>n</i><sup>&#8968<i>d</i>/2&#8969</sup></font>, for constant <font face="serif"><i>d</i></font>, improving previously known lower bounds for odd <font face="serif"><i>d</i></font>'s. More accurate estimates are provided for the class of cubic polynomials.
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[c20]</font> Sergeev I. S. <i><font color="300080"> Programs with time-lags.</font></i>
+    Proc. PTK'19 (online, 2021). Kazan: Izd. KFU, 2021, 123-127.
+    <a href="./papers/PTK2021.pdf">PDF</a> (in Russian)
+</div>
+
+<div class="comm">
+ &#9672 We introduce a model of programs reflecting a conveyor way of computations and provide a few simple examples to illustrate some effects on the complexity.
+</div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[39]</font> Sergeev I. S. <i><font color="300080"> Formula complexity of a linear function in a <font face="serif">k</font>-ary basis.</font></i>
+    Mathematical Notes. 2021. <b>109</b>(3), 445-458.
+    <a href="https://doi.org/10.1134/S0001434621030123">DOI</a> (translation of the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=mzm&paperid=12802&option_lang=eng">paper</a> from <i>
+Matematicheskie Zametki</i>)
+</div>
+
+<div class="comm">
+ &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain a correct form for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
+ </div>
+
+<p> </p>
+
+<div class="cite">
+<font color="300080">[38]</font> Sergeev I. S. <i><font color="300080"> On the upper bound of the complexity of sorting.</font></i>
+    Computational Mathematics and Mathematical Physics. 2021. <b>61</b>(2), 329-346.
+    <a href="https://doi.org/10.1134/S0965542521020111">DOI</a> (translation of the
+    <a href="https://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=11203&option_lang=eng">paper</a> from <i>Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki</i>)
+</div>
+
+<div class="comm">
+ &#9672 We prove that the sorting of <font face="serif"><i>n</i></font> elements of a linearly ordered set is possible in
+ <font face="serif">log<sub>2</sub>(<i>n</i>!) + <i>o</i>(<i>n</i>)</font> comparisons in the worst case, thus resolving a long-standing problem from information theory.
+ Previously known upper bounds were of the form <font face="serif">log<sub>2</sub>(<i>n</i>!) + <i>&#920</i>(<i>n</i>)</font>, even for the average case complexity.
+
+ <br> <i>Conference version</i>: in Proc. sPTK'19 (online, 2020).
+
+<br> &#8984 D. Taranovsky on his <a href="http://web.mit.edu/dmytro/www/ComparisonSorting.htm">page</a> claims to prove the same upper bound in 2020. However, the exposition there is too vague to understand whether it hides a correct proof (just my personal impression).
+</div>
+
+<p> </p>
+
+<div class="cite">
 <font color="300080">[38']</font> Sergeev I. S. <i><font color="300080"> On the asymptotic complexity of sorting.</font></i>  Electronic Colloquium on Computational Complexity. 2020. TR20-096.  PDF is available on the
     <a href="https://eccc.weizmann.ac.il/report/2020/096/">web-page</a>
 </div>
@@ -188,7 +281,7 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 We show that additional reciprocal inputs cannot help to reduce the complexity of monotone circuits in the basis <font face="serif">{+, &#215}</font> more than quadratically in both arithmetic and tropical settings, though it is well-known that a single division gate at the output can.
+ &#9672 We show that additional reciprocal inputs cannot help to reduce the complexity of monotone circuits in the basis <font face="serif">{+, &#215}</font> more than quadratically in both arithmetic and tropical settings, though it is well-known that a single division gate at the output can lead to superpolynomial savings.
 </div>
 
 <p> </p>
@@ -343,7 +436,7 @@ Problemy Peredachi Informatsii</i>)
 
 <br> <i>Conference version</i>: in Proc. PTK'18 (Penza, 2017).
 
-<br> &#8984 J. Alman and K. Rao (<a href="https://arxiv.org/abs/2211.06459">2022</a>) established a new record bound <font face="serif">~3.75<i>N</i> log<sub>2</sub><i>N</i></font> by a simpler method.
+<br> &#8984 J. Alman and K. Rao (<a href="https://doi.org/10.1145/3564246.3585188">2023</a>) established a new record bound <font face="serif">~3.75<i>N</i> log<sub>2</sub><i>N</i></font> by a simpler method.
 </div>
 
 <p> </p>
@@ -878,6 +971,7 @@ Matematicheskie Zametki</i>)
     <br> DMTCS &#8211 &#8220Discrete Models in the Theory of Control Systems&#8221 conference
     <br> IMT &#8211 &#8220Information Means and Technology&#8221 conference
     <br> PTK &#8211 &#8220Problems of Theoretical Cybernetics&#8221 conference
+    <br> sPTK &#8211 online seminar of the &#8220Problems of Theoretical Cybernetics&#8221 conference
     <br> SCCS &#8211 school-seminar &#8220Synthesis and Complexity of Control Systems&#8221
     <br> sDMA &#8211 seminar &#8220Discrete Mathematics and its Applications&#8221
     <br> yDMA &#8211 youth scientific school on Discrete Mathematics and its Applications
@@ -905,7 +999,7 @@ doctoral dissertation (Dr.Habil): <i><font color="300080">Some problems of synth
 
 <p> <a href="#top">return to the top</a> </p>
 
-<p> the page is not finished yet! </p>
+<!-- <p> the page is not finished yet! </p> -->
 
 </body>
 
