--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ The list of my scientific papers is also available at
 </div>
 
 <div class="comm">
- &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to slightly improve the upper bound on the additive complexity of the Sierpinsky (disjointness) matrix in depth <font face="serif">2</font>.
+ &#9672 J. Alman, Y. Guan, A. Padaki (2022) proposed a new method for constructing low-complexity coverings of Kronecker powers of matrices and improved an upper bound on the depth-<font face="serif">2</font> additive complexity of the Sierpinsky (disjointness) matrix stated in the <a href="#book">book</a>. We provide an alternative proof for the case of symmetric matrices in a stronger form. This allows to further improve the above upper bound.
 </div>
 
 <p> <a name="p40"></a> </p>
