--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+<meta http-equiv="Content-Type" content="text/html">
+<meta name="description" content="Igor S. Sergeev scientific homepage">
+<meta name="author" content="Igor S. Sergeev">
+<meta name="keywords" content="Igor Sergeev, Mathematics, Discrete Mathematics, Computer Science, Theoretical Computer Science, Computational Complexity, Fast Algorithms, Boolean Circuits, Boolean Formulas, Parallel Circuits">
 <a name="top"></a>
  <title>
         Igor S. Sergeev
@@ -180,7 +184,7 @@ The list of my scientific papers is also available at
 
 <div class="comm">
  &#9672 We prove a few results on the additive complexity. (i) We improve a third term in the N. Pippenger's upper bound (1980) on the complexity of the class of
-<font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded coefficients from <font face="serif">...+<i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif">...+<i>n</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) We obtain a tight asymptotic complexity of the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>-1</sup>, 2<sup><i>n</i></sup>-1</font>} improving non-matching bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence proved a lower bound <font face="serif"><i>n</i>+<i>n</i><sup>2/3-<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>1-<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i>)</font>.
+<font face="serif"><i>m</i>&times<i>n</i></font> matrices with bounded coefficients from <font face="serif">...+<i>O</i>(<i>m</i>+<i>n</i>)</font> to <font face="serif">...+<i>n</i></font>, and it is tight. Principally, it follows from [<a href="#p29">29</a>]. (ii) We obtain a tight asymptotic complexity of the sequence <font face="serif">{2, 2<sup>2</sup>, ..., 2<sup><i>n</i>-1</sup>, 2<sup><i>n</i></sup>-1</font>} improving non-matching bounds by P. Downey, B. Leong, R. Sethi (1981). (iii) D. Dobkin and R. J. Lipton (1980) for an explicitly given polynomially bounded sequence of size <font face="serif"><i>n</i></font> proved a lower bound <font face="serif"><i>n</i>+<i>n</i><sup>2/3-<i>o</i>(1)</sup></font>. We construct explicit sequences of size <font face="serif"><i>n</i></font>: (a) of polynomially bounded numbers, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i><sup>1-<i>&#949</i></sup>)</font>, for any <font face="serif"><i>&#949</i>>0</font>; (b) of numbers bounded by <font face="serif"><i>n</i><sup><i>O</i>(log <i>n</i>)</sup></font>, and of complexity <font face="serif"><i>n</i>+<i>&#937</i>(<i>n</i>)</font>.
  </div>
 
 <p> <a name="e13"></a>  </p>
@@ -217,7 +221,7 @@ The list of my scientific papers is also available at
  &#9672 We show that the multiplicative (nonscalar) complexity of the class of complex degree-<font face="serif"><i>d</i></font> polynomials of <font face="serif"><i>n</i></font> variables is of order <font face="serif"><i>n</i><sup>&#8968<i>d</i>/2&#8969</sup></font>, for constant <font face="serif"><i>d</i></font>, improving previously known lower bounds for odd <font face="serif"><i>d</i></font>'s. More accurate estimates are provided for the class of cubic polynomials.
 </div>
 
-<p> <a name="c20"></a> </p> 
+<p> <a name="c20"></a> </p>
 
 <div class="cite">
 <font color="300080">[c20]</font> Sergeev I. S. <i><font color="300080"> Programs with time-lags.</font></i>
@@ -240,7 +244,7 @@ Matematicheskie Zametki</i>)
 </div>
 
 <div class="comm">
- &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain a correct form for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
+ &#9672 We adapt V. M. Khrapchenko's formula size lower bound method (1971) to <font face="serif"><i>k</i></font>-ary unate bases <font face="serif"><i>U<sub>k</sub></i></font> by introducing appropriate complexity measures on graphs. As a consequence, we obtain a new lower bound <font face="serif"><i>&#937</i>(<i>n</i><sup>1.53</sup>)</font> for the formula complexity of a linear boolean function of <font face="serif"><i>n</i></font> variables in the basis <font face="serif"><i>U</i><sub>3</sub></font> improving the result by H. Chockler and U. Zwick (2001). Also, we obtain an accurate form for the order of formula complexity of linear functions in bases <font face="serif"><i>U<sub>k</sub></i></font> as <font face="serif"><i>k</i>&#8594&#8734</font>.
  </div>
 
 <p> <a name="p38"></a> </p>
